# haskell-monads

./: .gitignore  LICENSE  README.md  StatefulSymbolGen.hs  ValueOrDetails.hs  haskell-monads.cabal
