name:                haskell-monads
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/spirom/haskell-monads#readme
license:             MIT
license-file:        LICENSE
author:              Spiro Michaylov
maintainer:          spiro@michaylov.com
copyright:           2016 Spiro Michaylov
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable haskell-monads
  ghc-options:         -fwarn-incomplete-patterns
  hs-source-dirs:      .
  main-is:             ValueOrDetails.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
